new modded files

--- a/docker-composes/databases/oracle/docker-compose.yml
+++ b/docker-composes/databases/oracle/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3.1'
 services:
   database:
     image: sath89/oracle-12c:r1
+    build:
+      context: .
+      dockerfile: Dockerfile-Oracle
     container_name: oracle
     restart: always
     ports:
